removed unused crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,12 @@ resolver = "2"
 
 members = [
     "sonata/core",
-    "sonata/synth",
+	"sonata/synth",
     "sonata/models/piper",
     "sonata/models/vocoders",
-    "sonata-grpc",
-    "sonata-python",
-    "libsonata",
+	#"sonata-grpc",
+	"sonata-python",
+	#"libsonata",
     "sonata-cli",
     "espeak-phonemizer",
     "libtorch-inference",
